2015-09-29 Moved GenerateProjection into Cashflow

--- a/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
+++ b/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>ContainerWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ListViewScroll.cs" />
+    <Compile Include="Converters\MultiBooleanAndConverter.cs" />
     <Compile Include="Converters\ToggleBooleanConverter.cs" />
     <Compile Include="Converters\NullToCollapsedConverter.cs" />
     <Compile Include="Converters\NegativeVisibilityConverter.cs" />
