--- a/src/Finances.Core/Finances.Core.csproj
+++ b/src/Finances.Core/Finances.Core.csproj
@@ -48,9 +48,16 @@
     <Compile Include="Engines\Cashflow\AggregatedProjectionItemsGeneratorFactory.cs" />
     <Compile Include="Engines\Cashflow\CashflowProjectionTransfer.cs" />
     <Compile Include="Engines\Cashflow\AggregatedProjectionItemsGeneratorDetail.cs" />
+    <Compile Include="Engines\ScheduleFrequencyCalculatorWeekly.cs" />
     <Compile Include="Engines\Cashflow\ProjectionTransferGenerator.cs" />
     <Compile Include="Engines\Cashflow\TransferDirectionGenerator.cs" />
+    <Compile Include="Engines\ScheduleInfo.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Schedule.cs" />
+    <Compile Include="Factories\ICashflowFactory.cs" />
+    <Compile Include="Factories\ITransferFactory.cs" />
+    <Compile Include="Factories\IScheduleFactory.cs" />
+    <Compile Include="Interfaces\IScheduleInfo.cs" />
     <Compile Include="Interfaces\IAggregatedProjectionItemsGeneratorFactory.cs" />
     <Compile Include="Interfaces\IAggregatedProjectionItemsGenerator.cs" />
     <Compile Include="Engines\Cashflow\xMonlthlyTransferFrequencyDateCalculator.cs" />
@@ -59,8 +66,8 @@
     <Compile Include="Engines\Cashflow\TransferDirection.cs" />
     <Compile Include="Engines\CashflowEngineB.cs" />
     <Compile Include="Engines\CashflowEngineC.cs" />
-    <Compile Include="Engines\Cashflow\TransferFrequencyDateCalculatorFactory.cs" />
-    <Compile Include="Engines\Cashflow\TransferFrequencyDateCalculatorMonthly.cs" />
+    <Compile Include="Engines\ScheduleFrequencyCalculatorFactory.cs" />
+    <Compile Include="Engines\SchduleFrequencyCalculatorMonthly.cs" />
     <Compile Include="Entities\Bank.cs" />
     <Compile Include="Entities\BankAccount.cs" />
     <Compile Include="Entities\Cashflow.cs" />
@@ -70,12 +77,13 @@
     <Compile Include="Entities\TransferCategory.cs" />
     <Compile Include="Entities\Transfer.cs" />
     <Compile Include="Entities\DataIdName.cs" />
-    <Compile Include="Exceptions\FinancesCoreException.cs" />
+    <Compile Include="Entities\Exceptions\FinancesCoreException.cs" />
     <Compile Include="Interfaces\IAppSettings.cs" />
     <Compile Include="Interfaces\IProjectionTransferGenerator.cs" />
     <Compile Include="Interfaces\IRepositoryRead.cs" />
+    <Compile Include="Interfaces\IScheduleEntity.cs" />
     <Compile Include="Interfaces\ITransferDirectionGenerator.cs" />
-    <Compile Include="Interfaces\ITransferFrequencyDateCalculatorFactory.cs" />
+    <Compile Include="Interfaces\IScheduleFrequencyCalculatorFactory.cs" />
     <Compile Include="Interfaces\ICashflowEngineC.cs" />
     <Compile Include="Interfaces\ICashflowEngineB.cs" />
     <Compile Include="Interfaces\ICashflowEngineA.cs" />
@@ -84,7 +92,7 @@
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IGeneralRepository.cs" />
     <Compile Include="Interfaces\IMappingCreator.cs" />
-    <Compile Include="Interfaces\ITransferFrequencyDateCalculator.cs" />
+    <Compile Include="Interfaces\IScheduleFrequencyCalculator.cs" />
     <Compile Include="Interfaces\ITransferRepository.cs" />
     <Compile Include="Interfaces\IBankAccountRepository.cs" />
     <Compile Include="Interfaces\IBankRepository.cs" />
