--- a/src/Finances.IntegrationTests.MS/Finances.IntegrationTests.MS.csproj
+++ b/src/Finances.IntegrationTests.MS/Finances.IntegrationTests.MS.csproj
@@ -43,6 +43,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -61,6 +69,12 @@
     <Compile Include="BankRepositoryEFTests.cs" />
     <Compile Include="BankAccountRepositoryEFTests.cs" />
     <Compile Include="CashflowRepositoryEFTests.cs" />
+    <Compile Include="ConnectionInstaller.cs" />
+    <Compile Include="Fakes\FakeScheduleFactory.cs" />
+    <Compile Include="Fakes\FakeTransferFactory.cs" />
+    <Compile Include="IntegrationBase.cs" />
+    <Compile Include="IntegrationConnection.cs" />
+    <Compile Include="IntegrationContainer.cs" />
     <Compile Include="TransferRepositoryEFTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
