--- a/src/Finances.UnitTests.MS/Finances.UnitTests.MS.csproj
+++ b/src/Finances.UnitTests.MS/Finances.UnitTests.MS.csproj
@@ -72,8 +72,13 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Core\Engines\SchedueTests\ScheduleTests.cs" />
+    <Compile Include="Core\EntityTests\CashflowTests\CashflowGenerateProjectionTest.cs" />
+    <Compile Include="Core\EntityTests\CashflowTests\CashflowGenerateProjectionBasicTest.cs" />
     <Compile Include="Fakes\FakeBankAccountRepository.cs" />
-    <Compile Include="Finances.Core.Engines.Cashflow\ProjectionTransferGeneratorTests.cs" />
+    <Compile Include="Core\Engines\Cashflow\ProjectionTransferGeneratorTests.cs" />
+    <Compile Include="Fakes\FakeScheduleFactory.cs" />
+    <Compile Include="Fakes\FakeTransferRepository.cs" />
     <Compile Include="OrmEntityMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CashflowEngineTests.cs" />
