Column sorting. Hide bank name if logo. Double-click headers bug fix.

--- a/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
+++ b/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
@@ -62,7 +62,10 @@
       <DependentUpon>ContainerWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\DataContextSpy.cs" />
+    <Compile Include="Controls\ListViewColumnWidths.cs" />
+    <Compile Include="Controls\ListViewMouseDoubleClick.cs" />
     <Compile Include="Controls\ListViewScroll.cs" />
+    <Compile Include="Converters\EmptyConverter.cs" />
     <Compile Include="Converters\MultiBooleanAndConverter.cs" />
     <Compile Include="Converters\ToggleBooleanConverter.cs" />
     <Compile Include="Converters\NullToCollapsedConverter.cs" />
@@ -92,6 +95,7 @@
     <Compile Include="ObjectInfo\ObjectReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ValidationHelper.cs" />
+    <Compile Include="ViewDataBase.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="WindsorInstallers\DialogServiceInstaller.cs" />
     <Compile Include="WindsorInstallers\ObjectInfoViewModelInstaller.cs" />
