Fixed double-click so now only works on a ListViewItem

--- a/src/Finances.WinClient/App.config
+++ b/src/Finances.WinClient/App.config
@@ -8,7 +8,7 @@
   </connectionStrings>
 
   <appSettings>
-    <add key="debug" value="true"/>
+    <add key="debug" value="false"/>
   </appSettings>
 
 </configuration>
