Used TPL Dataflow for BankAccounts

--- a/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
+++ b/src/Finances.Core.Wpf/Finances.Core.Wpf.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Converters\NullToVisibleConverter.cs" />
     <Compile Include="Converters\PercentageConverter.cs" />
     <Compile Include="Converters\PositiveVisibilityConverter.cs" />
+    <Compile Include="ObservableCollectionSafe.cs" />
     <Compile Include="SortedListViewModelBase.cs" />
     <Compile Include="Events\TreeViewItemExpandedEventArgs.cs" />
     <Compile Include="Input\InputDecimal.cs" />
