--- a/src/Finances.Core/Finances.Core.csproj
+++ b/src/Finances.Core/Finances.Core.csproj
@@ -39,6 +39,10 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.24.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Apex.cs" />
     <Compile Include="AppSettings.cs" />
+    <Compile Include="Diag.cs" />
     <Compile Include="Interfaces\ICashflowProjection.cs" />
     <Compile Include="Interfaces\IRepositoryWrite.cs" />
     <Compile Include="ValueObjects\BalanceState.cs" />
