--- a/src/Finances.Core.UnitTest/Finances.Core.UnitTest.csproj
+++ b/src/Finances.Core.UnitTest/Finances.Core.UnitTest.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{377D0637-9A91-4913-B480-276B9E2DEDD0}</ProjectGuid>
+    <ProjectGuid>{EF0847FC-3BED-4F9C-A278-766EBB2D994E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Finances.UnitTests.MS</RootNamespace>
-    <AssemblyName>Finances.UnitTests.MS</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Finances.Core.UnitTest</RootNamespace>
+    <AssemblyName>Finances.Core.UnitTest</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -35,33 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
-    </Reference>
-    <Reference Include="AutoMapper.Net4, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
-    </Reference>
-    <Reference Include="FluentNHibernate, Version=1.4.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\..\libs\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="Moq">
-      <HintPath>..\..\libs\Moq.3.1.416.3\lib\Moq.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.24.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -71,46 +45,19 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>False</Private>
-        </Reference>
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Core\Engines\Cashflow\CashflowProjectionTests.cs" />
-    <Compile Include="Core\Engines\SchedueTests\ScheduleTests.cs" />
-    <Compile Include="Core\EntityTests\CashflowTests\CashflowGenerateProjectionTest.cs" />
-    <Compile Include="Core\EntityTests\CashflowTests\CashflowGenerateProjectionBasicTest.cs" />
-    <Compile Include="Fakes\FakeBankAccountRepository.cs" />
-    <Compile Include="Core\Engines\Cashflow\ProjectionTransferGeneratorTests.cs" />
-    <Compile Include="Fakes\FakeScheduleFactory.cs" />
-    <Compile Include="Fakes\FakeTransferRepository.cs" />
-    <Compile Include="OrmEntityMapperTests.cs" />
+    <Compile Include="CashflowProjectionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CashflowEngineTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Finances.Core.Wpf\Finances.Core.Wpf.csproj">
-      <Project>{f6ccdae2-ffed-4016-95d2-6817230c3519}</Project>
-      <Name>Finances.Core.Wpf</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Finances.Core\Finances.Core.csproj">
       <Project>{bb8793f8-877f-42b0-82ef-0786b2c214ef}</Project>
       <Name>Finances.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Finances.Persistence.EF\Finances.Persistence.EF.csproj">
-      <Project>{8bba6faa-e9db-4016-8af2-1466a7a751a0}</Project>
-      <Name>Finances.Persistence.EF</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Finances.WinClient\Finances.WinClient.csproj">
-      <Project>{d481adf1-4007-40d7-9e05-2daaf3d89d90}</Project>
-      <Name>Finances.WinClient</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Finances.WinClient\" />
-    <Folder Include="Persistence.EF\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
