--- a/src/Finances.WinClient/Finances.WinClient.csproj
+++ b/src/Finances.WinClient/Finances.WinClient.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Finances.WinClient</RootNamespace>
-    <AssemblyName>Finances.WinClient</AssemblyName>
+    <AssemblyName>Finances</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -25,7 +25,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>12</ApplicationRevision>
+    <ApplicationRevision>13</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -90,6 +90,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\Microsoft.Tpl.Dataflow.4.5.24\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -152,7 +153,7 @@
     <Compile Include="WindsorInstallers\TransferInstaller.cs" />
     <Compile Include="WindsorInstallers\InterceptorsInstaller.cs" />
     <Compile Include="WindsorInstallers\MainInstaller.cs" />
-    <Compile Include="WindsorInstallers\WorkspaceInstaller.cs" />
+    <Compile Include="WindsorInstallers\WorkspaceAreaInstaller.cs" />
     <Compile Include="Converters\AccountElsewhereToVisibileConverter.cs" />
     <Compile Include="Converters\AccountElsewhereToCollapsedConverter.cs" />
     <Compile Include="Converters\BalanceStateToColourConverter.cs" />
@@ -227,6 +228,7 @@
     <Compile Include="Views\WorkspaceAreaView.xaml.cs">
       <DependentUpon>WorkspaceAreaView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindsorInstallers\WorkspacesInstaller.cs" />
     <Page Include="AppResourceDictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
