--- a/src/Finances.Core/Finances.Core.csproj
+++ b/src/Finances.Core/Finances.Core.csproj
@@ -53,7 +53,11 @@
     <Compile Include="Apex.cs" />
     <Compile Include="AppSettings.cs" />
     <Compile Include="Diag.cs" />
+    <Compile Include="Entities\BalanceDateBankAccount.cs" />
+    <Compile Include="Entities\BalanceDate.cs" />
+    <Compile Include="Factories\IBalanceDateFactory.cs" />
     <Compile Include="Factories\ICashflowProjectionGroupFactory.cs" />
+    <Compile Include="Interfaces\IBalanceDateRepository.cs" />
     <Compile Include="Interfaces\ICashflowProjection.cs" />
     <Compile Include="Interfaces\IRepositoryWrite.cs" />
     <Compile Include="ValueObjects\BalanceState.cs" />
@@ -101,6 +105,7 @@
     <Compile Include="Interfaces\IBankAccountRepository.cs" />
     <Compile Include="Interfaces\IBankRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindsorInstallers\BalanceDateInstaller.cs" />
     <Compile Include="WindsorInstallers\CashflowProjectionGroupInstaller.cs" />
     <Compile Include="WindsorInstallers\CashflowProjectionModeInstaller.cs" />
     <Compile Include="WindsorInstallers\CashflowProjectionInstaller.cs" />
